# vacuumcleaner

./: .gitignore  CMakeLists.txt  README.md  cartographer.lua  config.rviz  package.xml  setup.cfg  setup.py  world
action/: cleaning.action
config/: base_local_planner_params.yaml  cleaning.yaml  config.rviz  config.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  nav2.yaml  rviz.rviz  slam.yaml  world
config/model/: model.urdf
config/vacuumcleaner_model/: model.config  model.xacro
launch/: .rviz_launch.py.swp  exploration.launch  explore.launch  launch.py  launch_main.py  launch_nav2.py  launch_slam.py  robot.launch  rviz  rviz_launch.py  simulation.launch  simulation_navigation.launch
log/: latest_build
models/: robot.sdf  robot.xacro
models/worlds/: square  square_2m
nav2d/: navigator.yaml  operator.yaml
navigation/: base_local_planner_params.yaml  global_costmap_params.yaml
src/: client.cpp  main.cpp  map.cpp  map.h  movement.cpp  movement.h  parameter.h  pose_generator.h  server.cpp  types.h  vacuumcleaner_server.cpp
src/route-planning/: spiral_planner.cpp  spiral_planner.h
src/vacuumcleaner/: config.rviz  costmap.yaml  mapper.yaml  nav2d.yaml  operator.yaml  package.xml
src/vacuumcleaner/launch/: rviz.launch  simulation.launch  simulation_navigation.launch
src/vacuumcleaner/nav2d/: nav2d.yaml
src/vacuumcleaner/urdf/vacuumcleaner/: .model.urdf.swp  model.urdf
urdf/: model  world
urdf/vacuumcleaner/: model.config  model.sdf  model.urdf
vacuumcleaner/: spawn_entity.py
