<?xml version="1.0"?>
<package format="2">
  <name>vacuumcleaner</name>
  <version>0.0.0</version>
  <description>The vacuumcleaner package</description>
  <maintainer email="william.nagels@gmail.com">William Nagels</maintainer>
  <author email="william.nagels@gmail.com">William Nagels</author>
  <url type="repository">http://github.com/williamnagels/vacuum-cleaner</url>
  
  <license>Boost</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <export>
  </export>
</package>
